# GLocalFlexTrade

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.rst  Dockerfile  Makefile  README.md  codecov.yml  endpoints.md  fleximar-trading-message-client.7z  index.html  mkdocs.yml  pyproject.toml  single_trader_client.py  single_trader_client_fasolt1.py  single_trader_client_fasolt1_tu10.py  single_trader_client_fasolt1_tu9.py  sitemap.xml  test.py  test_trading_client.py  test_trading_client.py.save  versions.json
.github/workflows/: ci.yml  flxtrd.yml
0.1/: 404.html  index.html  sitemap.xml
0.1/dev/: index.html
0.1/mermaid/: index.html
0.2/: 404.html  index.html  sitemap.xml
0.2/dev/: index.html
0.2/mermaid/: index.html
alias/dev/: index.html
alias/mermaid/: index.html
dev/: index.html
docs/: README.md  dev.md  index.md
examples/: ampq_client_example.py  rest_api_user_login.py  rest_client_example.py  test_example.py  ticker_listen.py  trade_client_example.py  trading_client.py  user_login.py
examples/v0.1/: rest_api_user_login.py  trade_client_example.py
examples/v0.2/: rest_api_user_login.py  trade_client_ask_bid_order.py
latest/dev/: index.html
latest/mermaid/: index.html
market_status_reader/: market_status_reader.py
mermaid/: index.html
messenger/: messagesender.py
search/: search_index.json
src/: __init__.py
src/flxtrd/: __init__.py
src/flxtrd/common/: __init__.py  api_base.py
src/flxtrd/common/plugins/: auth.py  base.py  log.py
src/flxtrd/core/: api_client.py  logger.py  types.py  utils.py
src/flxtrd/core/plugins/: __init__.py  auth.py  base.py  devices.py  log.py
src/flxtrd/protocols/: ampq.py  base.py  rest.py  restapi.py
src/flxtrd/protocols/rest/: rest_api.py
src/flxtrd/rest/: __init__.py  rest_client.py
tests/: test_flex_api_client.py  test_foo.py  test_restapi.py  test_utils.py
tests/plugins/: test_auth.py
trademessage/: messageserializer.py
v0.1/: 404.html  index.html  sitemap.xml
v0.1/dev/: index.html
v0.1/mermaid/: index.html
v0.1/overrides/: main.html
v0.2/: 404.html  index.html  sitemap.xml
v0.2/dev/: index.html
v0.2/mermaid/: index.html
v0.2/search/: search_index.json
