[tool.poetry]
name = "flxtrd"
version = "0.2.2"
description = "Public client API for the flexible energy trading market GLocalFlex."
authors = ["glocalflex"]
repository = "https://github.com/glocalflex/GLocalFlexTrade"
documentation = "https://glocalflex.github.io/GLocalFlexTrade/"
readme = "README.md"
# packages = [
#   {include = "src"},
#   {include = "examples"},
# ]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
pika = "^1.3.1"
requests = ">=2.28.0"



[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
mypy = "^1.4.1"
pre-commit = "^3.3.3"
tox = "^4.6.3"


[tool.poetry.group.docs.dependencies]
mike = "^1.1.2"
mkdocs = "^1.4.3"
mkdocs-material = "^9.1.18"
mkdocs-include-markdown-plugin = "^4.0.4"
mkdocs-glightbox = "^0.3.4"
mkdocstrings = "^0.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# [tool.poetry.scripts]
# gflex-trading-bot = "gflex.client:main"

[tool.flake8]
max-line-length = 100
max-complexity = 18
ignore = "F401 E501"

[tool.black]
line-length = 100
multiline = "VERTICAL_HANGING_INDENT"
target-version = ['py310']
preview = true

[tool.mypy]
files = ["flxtrd"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"

[tool.isort]
profile = "black"

[tool.ruff]
target-version = "py37"
line-length = 100
fix = false
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
    # Import unused
    "F401"
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
# source = ["flxtrd"]
[tool.pytest.ini_options]
 log_cli = 1
